--- a/tasks/lang/javascript.yml
+++ b/tasks/lang/javascript.yml
@@ -1,1 +1,19 @@
 ---
+# TODO: dont run if already installed
+- name: install node ppa
+  become: true
+  shell: 'curl -sL https://deb.nodesource.com/setup_7.x | sudo -E bash -'
+  args:
+    executable: /bin/bash
+
+- name: install nodejs
+  become: true
+  apt: name=nodejs
+
+- name: install global npm packages
+  become: true
+  npm: name="{{item}}" global=yes
+  with_items:
+  - grunt-cli
+  - nodemon
+  - serverless
