--- a/tasks/lang/ruby.yml
+++ b/tasks/lang/ruby.yml
@@ -1,1 +1,10 @@
 ---
+- name: install gemrc
+  copy:
+    src: .gemrc
+    dest: /home/{{ansible_user_id}}/.gemrc
+
+# TODO:
+# - rvm setup
+# - install ruby
+# - install global gems
