--- a/tasks/lang/python.yml
+++ b/tasks/lang/python.yml
@@ -3,6 +3,10 @@
   become: true
   apt: name=python
 
+- name: install python-pip
+  become: true 
+  apt: name=python-pip
+
 - name: install python3 pip
   become: true
   apt: name=python3-pip
