--- a/tasks/lang/go.yml
+++ b/tasks/lang/go.yml
@@ -15,3 +15,5 @@
 # TODO: add PATH vars
 # export GOPATH=$HOME/work
 # export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+
+# TODO: install go libraries 
