--- a/tasks/lang/javascript.yml
+++ b/tasks/lang/javascript.yml
@@ -13,7 +13,4 @@
 - name: install global npm packages
   become: true
   npm: name="{{item}}" global=yes
-  with_items:
-  - grunt-cli
-  - nodemon
-  - serverless
+  with_items: "{{npm_packages}}"
