--- a/tasks/lang/python.yml
+++ b/tasks/lang/python.yml
@@ -4,7 +4,7 @@
   apt: name=python
 
 - name: install python-pip
-  become: true 
+  become: true
   apt: name=python-pip
 
 - name: install python3 pip
@@ -14,12 +14,7 @@
 - name: install pip3 packages
   become: true
   pip: name="{{item}}" state=latest executable=/usr/bin/pip3
-  with_items:
-  - boto3
-  - bumpversion
-  - pylint
-  - pytest
-  - pytest-cov
+  with_items: "{{pip_packages}}"
 
 - name: upgrade pip
   become: true
@@ -28,9 +23,4 @@
 - name: install pip packages
   become: true
   pip: name="{{item}}" state=latest
-  with_items:
-  - boto3
-  - bumpversion
-  - pylint
-  - pytest
-  - pytest-cov
+  with_items: "{{pip_packages}}"
