--- a/tasks/lang/python.yml
+++ b/tasks/lang/python.yml
@@ -1,15 +1,17 @@
 ---
 - name: install python
   become: true
-  apt: name=python
-
-- name: install python-pip
-  become: true
-  apt: name=python-pip
-
-- name: install python3 pip
-  become: true
-  apt: name=python3-pip
+  apt: name="{{item}}"
+  with_items:
+  - build-essential
+  - libffi-dev
+  - libssl-dev
+  - python
+  - python-dev
+  - python-pip
+  - python3
+  - python3-dev
+  - python3-pip
 
 - name: install pip3 packages
   become: true
